[package]
edition = "2021"
name = "rust-dpdk-sys"
version = "0.1.22110"
authors = [
    "Keunhong Lee <dlrmsghd@gmail.com>",
    "Jeehoon Kang <jeehoon.kang@kaist.ac.kr>",
    "ANLAB <support@an.kaist.ac.kr>",
]

homepage = "https://github.com/ANLAB-KAIST/rust-dpdk"
repository = "https://github.com/ANLAB-KAIST/rust-dpdk"
documentation = "https://github.com/ANLAB-KAIST/rust-dpdk"
license = "BSD-3-Clause"
keywords = ["rust", "dpdk", "binding", "bindgen"]

description = """
Rust binding for Intel DPDK.
"""

[build-dependencies]
regex = "1"
bindgen = "0.70.1"
num_cpus = "1"
clang = { version = "2.0.0", features = ["runtime", "clang_3_9"] }
cc = "1"
etrace = "1"
itertools = "0.13.0"
crossbeam-queue = "0.3"
pkg-config = "0.3.30"

[features]
default = ["constants_cache"]
constants_cache = []

[lib]
name = "dpdk_sys"

[[bin]]
name = "dpdk_sys_test"
path = "bin/dpdk_sys_test.rs"
